syntax = "proto3";

package proto;

message GetOGTagsRequest {
    string alias = 1;
}

message GetOGTagsResponse {
    string title = 1;
    string description = 2;
    string image_url = 3;
}

message GetTwitterTagsRequest {
    string alias = 1;
}

message GetTwitterTagsResponse {
    string title = 1;
    string description = 2;
    string image_url = 3;
}

message UpdateOGTagsRequest {
    string alias = 1;
    string title = 2;
    string description = 3;
    string image_url = 4;
}

message UpdateOGTagsResponse {
    string title = 1;
    string description = 2;
    string image_url = 3;
}

message UpdateTwitterTagsRequest {
    string alias = 1;
    string title = 2;
    string description = 3;
    string image_url = 4;
}

message UpdateTwitterTagsResponse {
    string title = 1;
    string description = 2;
    string image_url = 3;
}

service MetaTagService {
	  rpc GetOGTags(GetOGTagsRequest) returns (GetOGTagsResponse) {}
	  rpc GetTwitterTags(GetTwitterTagsRequest) returns (GetTwitterTagsResponse) {}
	  rpc UpdateOGTags(UpdateOGTagsRequest) returns (UpdateOGTagsResponse) {}
	  rpc UpdateTwitterTags(UpdateTwitterTagsRequest) returns (UpdateTwitterTagsResponse) {}
}